--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/demoSecurity
+spring.datasource.url=jdbc:mysql://localhost:3306/project_MD5
 spring.datasource.username=root
 spring.datasource.password=12345678
 
