--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jpa.properties.hibernate.show_sql= true
 spring.jpa.properties.hibernate.format_sql= true
 
 
-jwt.secret-key=hunghx
+jwt.secret-key=huan
 jwt.expirated=86400000
 
 server.port=9091
