--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jpa.properties.hibernate.show_sql= true
 spring.jpa.properties.hibernate.format_sql= true
 
 
-jwt.secret-key=huan
+jwt.secret-key=huanbd
 jwt.expirated=86400000
 
 server.port=9091
@@ -23,4 +23,14 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 #mat khau xac thuc email = olld tspj eawv flvj
 
+# cau hinh aws
+cloud.aws.credentials.access-key=AKIAXYBMMZBBXNOHTR5E
+cloud.aws.credentials.secret-key=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
+cloud.aws.region.static=us-east-2
+cloud.aws.stack.auto=false
 
+application.bucket.name = huanbd
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.file-size-threshold=1MB
+spring.servlet.multipart.max-request-size=20MB
+spring.servlet.multipart.enabled=true
